src/objects/Referral__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Address__c</fullName>
        <formula>if(LEN(Customer__r.MailingStreet)&gt;0, Customer__r.MailingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Customer__r.MailingCity)&gt;0, Customer__r.MailingCity&amp; &quot;, &quot; , &quot;&quot; ) &amp; 
if(LEN(Customer__r.MailingState)&gt;0, Customer__r.MailingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Customer__r.MailingPostalCode)&gt;0, Customer__r.MailingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN(Customer__r.MailingCountry) &gt;0, Customer__r.MailingCountry,&quot;&quot;)</formula>
        <label>Customer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <formula>Customer__r.Customer_Number__c</formula>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Utility Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <formula>Customer__r.Email</formula>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <formula>Customer__r.Phone</formula>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <label>Referral Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Trade Ally</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Status__c</fullName>
        <label>Referral Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Customer Contacted</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <formula>if(LEN(Site_Number__r.Address_1__c)&gt;0, Site_Number__r.Address_1__c&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp; 
if(LEN(Site_Number__r.City__c)&gt;0, Site_Number__r.City__c&amp; &quot;, &quot; , &quot;&quot; ) &amp; 
if(LEN(TEXT(Site_Number__r.State__c))&gt;0, TEXT(Site_Number__r.State__c)&amp; &quot; &quot; , &quot;&quot; )&amp; 
if(LEN(Site_Number__r.Postal_Code__c)&gt;0, Site_Number__r.Postal_Code__c,&quot;&quot;) &amp; BR() &amp; 
If(LEN(Site_Number__r.Address_2__c) &gt;0, Site_Number__r.Address_2__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Number</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RRN-{000000}</displayFormat>
        <label>Referral Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>